vodici-root-redirect/kustomize/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-domain
spec:
  redirectRegex:
    regex: ^https?://vodici.djnd.si/(.*)
    replacement: https://vodici.danesjenovdan.si/${1}
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-latest
spec:
  redirectRegex:
    regex: ^https?://vodici.danesjenovdan.si/$
    replacement: https://vodici.danesjenovdan.si/referendum/4xproti/
    permanent: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mocljudem-redirect-domain
spec:
  redirectRegex:
    regex: ^https?://vodici.moc-ljudem.si/(.*)
    replacement: https://vodici.mocljudem.si/${1}
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mocljudem-redirect-to-latest
spec:
  redirectRegex:
    regex: ^https?://vodici.mocljudem.si/$
    replacement: https://vodici.mocljudem.si/digitalna-identiteta/
    permanent: false
