vodici-root-redirect/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vodici-root-redirect
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd,
      vodici-redirect-domain@kubernetescrd,
      vodici-redirect-to-latest@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vodici.djnd.si
        - vodici.danesjenovdan.si
      secretName: volitveni-vodici-tls
  rules:
    - host: vodici.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: volitveni-vodic-dz-2026
                port:
                  number: 80
    - host: vodici.danesjenovdan.si
      http: *http_paths
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vodici-mocljudem-root-redirect
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd,
      vodici-mocljudem-redirect-to-latest@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vodici.mocljudem.si
      secretName: vodici-mocljudem-tls
  rules:
    - host: vodici.mocljudem.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: volitveni-vodic-mocljudem-digitalna-identiteta-2026
                port:
                  number: 80
    - host: vodici.mocljudem.si
      http: *http_paths
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vodici-parlametar-redirect
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/temporal-redirect: https://eu-poslovi.parlametar.hr/
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - parlametar.lb.djnd.si
      secretName: vodici-parlametar-redirect-tls
  rules:
    - host: parlametar.lb.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eu-poslovi
                port:
                  number: 80
